# PyTorch-Weight-Imprinting

./: ImprintingMachine.py  README.md  finetune.py  meta.json  pyproject.toml  test.py
test_data/: imprinted_labels.txt  labels.txt
